# claude-event-bus

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  python.yml
docs/: TAILSCALE_SETUP.md
scripts/: agent-event-bus.service  com.evansenter.agent-event-bus.plist  com.evansenter.claude-event-bus.plist  dev.sh  install-cli.sh  install-launchagent.sh  install-systemd.sh  start.sh  stop.sh  test-dm-notifications.sh  uninstall-cli.sh  uninstall-launchagent.sh  uninstall-systemd.sh
scripts/icon-gen/: Cargo.toml
scripts/icon-gen/src/: main.rs
src/agent_event_bus/: __init__.py  cli.py  guide.md  helpers.py  middleware.py  server.py  session_ids.py  storage.py
src/event_bus/: cli.py  guide.md  helpers.py  middleware.py  server.py  storage.py
tests/: conftest.py  test_cli.py  test_helpers.py  test_middleware.py  test_notifications.py  test_server.py  test_session_ids.py  test_storage.py
