[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-event-bus"
version = "0.1.0"
description = "MCP server for cross-session Claude Code communication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Evan Senter" }
]
keywords = ["mcp", "claude", "event-bus", "coordination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
event-bus = "event_bus.server:main"
event-bus-cli = "event_bus.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/event_bus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_dm_notifications: tests that need real DM notification behavior (not mocked)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by formatter
